@@ -11,7 +11,7 @@ libgtkchem3dviewer_la_headers = \
 gcuincludedir = $(includedir)/gcu/chem3d
 gcuinclude_HEADERS = $(libgtkchem3dviewer_la_headers)
 		
-libgtkchem3dviewer_la_LDFLAGS = -version-info  @GTKCV_VERSION_INFO@ @GCU_LIBS@ \
+libgtkchem3dviewer_la_LDFLAGS = -version-info  @GTKC3D_VERSION_INFO@ @GCU_LIBS@ \
 				@GC3D_LIBS@
 AM_CXXFLAGS = @GCU_CFLAGS@ @GC3D_CFLAGS@
 
