@@ -6,6 +6,7 @@ AC_CANONICAL_HOST
 
 GTKP_VERSION=$VERSION
 GTKCV_VERSION=$VERSION
+GTKC3D_VERSION=$VERSION
 GCU_VERSION=$VERSION
 
 AM_CONFIG_HEADER(config.h)
@@ -25,10 +26,12 @@ AC_PROG_INTLTOOL
 
 GTKP_VERSION_INFO=`echo $GTKP_VERSION|awk -F . '{ print $1+$2":"$3":"$2 }'`
 GTKCV_VERSION_INFO=`echo $GTKCV_VERSION|awk -F . '{ print $1+$2":"$3":"$2 }'`
+GTKC3D_VERSION_INFO=`echo $GTKC3D_VERSION|awk -F . '{ print $1+$2":"$3":"$2 }'`
 GCU_VERSION_INFO=`echo $GCU_VERSION|awk -F . '{ print $1+$2":"$3":"$2 }'`
 
 AC_SUBST(GTKP_VERSION_INFO)
 AC_SUBST(GTKCV_VERSION_INFO)
+AC_SUBST(GTKC3D_VERSION_INFO)
 AC_SUBST(GCU_VERSION_INFO)
 
 ALL_LINGUAS="fr it pl"
@@ -100,7 +103,7 @@ fi
 AM_CONDITIONAL(WITH_OPENBABEL,test "$have_openbabel" = "yes")
 
 GCU_CFLAGS="$GCU_CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
--DLIBGLADE_DISABLE_DEPRECATED -Werror-implicit-function-declaration"
+-DLIBGLADE_DISABLE_DEPRECATED"
 AC_SUBST(GCU_CFLAGS)
 AC_SUBST(GCU_LIBS)
 
